@@ -17,7 +17,7 @@ files[] = handlers/views_handler_argument_numeric.inc
 files[] = handlers/views_handler_argument_string.inc
 files[] = handlers/views_handler_argument_group_by_numeric.inc
 files[] = handlers/views_handler_field.inc
-files[] = handlers/views_handler_field_counter.inc
+files[] = handlers/views_handler_field_counter.test
 files[] = handlers/views_handler_field_group_by_numeric.inc
 files[] = handlers/views_handler_field_boolean.inc
 files[] = handlers/views_handler_field_boolean.test
@@ -222,6 +222,7 @@ files[] = plugins/views_plugin_argument_validate_php.inc
 files[] = plugins/views_plugin_cache.inc
 files[] = plugins/views_plugin_cache_none.inc
 files[] = plugins/views_plugin_cache_time.inc
+files[] = tests/views_cache.test
 files[] = plugins/views_plugin_display.inc
 files[] = plugins/views_plugin_display_attachment.inc
 files[] = plugins/views_plugin_display_block.inc
